change button colour

--- a/src/main.css
+++ b/src/main.css
@@ -3,7 +3,8 @@ body {
 }
 
 .pink-btn {
-    background-color: #ef9a9a;
+    /*background-color: #ef9a9a;*/
+    background-color: #bbdefb;
     color: black;
 }
 
